refactor(bundle): take the robolectric flags and font properties from the daemon (#5382)